--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
-  "endOfLine": "auto",
-  "semi": true
+  "endOfLine": "lf",
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "quoteProps": "as-needed"
 }
